--- a/netcore/Movie.Backend/Movie.Backend/appsettings.json
+++ b/netcore/Movie.Backend/Movie.Backend/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:movie-admin.database.windows.net;  Database=Movie; User Id=adminMovie;Password=movie1234*; Trusted_Connection=False;Encrypt=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
