--- a/netcore/Movie.Backend/Movie.Backend/Properties/launchSettings.json
+++ b/netcore/Movie.Backend/Movie.Backend/Properties/launchSettings.json
@@ -9,20 +9,12 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Movie.Backend": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:44339;http://localhost:26764",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
