--- a/netcore/Movie.Backend/Mov.Controllers/appsettings.json
+++ b/netcore/Movie.Backend/Mov.Controllers/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "GrpcServices": {
+    "Services": {
+      "Url": "http://localhost:37031",
+      "ContractPattern": "Mov.ServicesContracts.dll"
+    }
+  },
   "AllowedHosts": "*"
 }
