Added Grpc Service

--- a/netcore/Movie.Backend/Mov.Controllers/appsettings.json
+++ b/netcore/Movie.Backend/Mov.Controllers/appsettings.json
@@ -6,11 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "GrpcServices": {
-    "Services": {
-      "Url": "http://localhost:37031",
-      "ContractPattern": "Mov.ServicesContracts.dll"
-    }
+    "Services": [
+      {
+        "Url": "http://localhost:5000",
+        "ContractPattern": "Mov.ServicesContrats.dll"
+      }
+    ]
   },
-  "AllowedHosts": "*"
-}
+      "AllowedHosts":"*"
+  }
