--- a/netcore/Movie.Backend/Mov.Controllers/Mov.Controllers.csproj
+++ b/netcore/Movie.Backend/Mov.Controllers/Mov.Controllers.csproj
@@ -1,17 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Mov.DataModels\Mov.DataModels.csproj" />
+    <ProjectReference Include="..\Mov.Core\Mov.Core.csproj" />
     <ProjectReference Include="..\Mov.ServicesContrats\Mov.ServicesContrats.csproj" />
-    <ProjectReference Include="..\Mov.Services\Mov.Services.csproj" />
   </ItemGroup>
 
 </Project>
