--- a/netcore/Movie.Backend/Mov.Services/Mov.Services.csproj
+++ b/netcore/Movie.Backend/Mov.Services/Mov.Services.csproj
@@ -1,18 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Mov.Core\Mov.Core.csproj" />
     <ProjectReference Include="..\Mov.DataModels\Mov.DataModels.csproj" />
     <ProjectReference Include="..\Mov.Mutual\Mov.Mutual.csproj" />
     <ProjectReference Include="..\Mov.ServicesContrats\Mov.ServicesContrats.csproj" />
