--- a/netcore/Movie.Backend/Mov.ServicesContrats/Mov.ServicesContrats.csproj
+++ b/netcore/Movie.Backend/Mov.ServicesContrats/Mov.ServicesContrats.csproj
@@ -1,10 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mov.Core\Mov.Core.csproj" />
     <ProjectReference Include="..\Mov.DataModels\Mov.DataModels.csproj" />
   </ItemGroup>
 
