--- a/netcore/Movie.Backend/Mov.DataModels/Mov.DataModels.csproj
+++ b/netcore/Movie.Backend/Mov.DataModels/Mov.DataModels.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="protobuf-net.Core" Version="3.0.101" />
+  </ItemGroup>
+
 </Project>
