--- a/netcore/Movie.Backend/Mov.Controllers/Mov.Controllers.csproj
+++ b/netcore/Movie.Backend/Mov.Controllers/Mov.Controllers.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Mov.Core\Mov.Core.csproj" />
     <ProjectReference Include="..\Mov.ServicesContrats\Mov.ServicesContrats.csproj" />
+    <ProjectReference Include="..\Mov.ViewModels\Mov.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
